<resources >
    <string name="app_ident" translateable="false">AndroidFE</string>
    <string name="app_name">Idle Lands</string>

    <string name="login_name_hint">Character name</string>
    <string name="login_password_hint">Password</string>
    <string name="login_login_button">Sign in</string>
    <string name="login_remember_me">Remember</string>
    <string name="login_register_button">Register</string>
    <string name="notification_no_news">Running</string>
    <string name="login_title">Welcome to Idle Lands!\n..........</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_logout">Logout</string>
    <string name="toast_logged_out">Logged out.</string>
    <string name="toast_something_went_wrong">Something went wrong.</string>
    <string name="notification_action_stop">Stop</string>
    <string name="notification_action_more">More</string>
    <string name="main_activity_tab_adventure_log">Adventure Log</string>
    <string name="main_actionbar_title">%1$s, the %2$s</string>
    <string name="main_activity_tab_archievments">Achievements</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_sort_by_name">Sort by name</string>
    <string name="menu_sort_by_type">Sort by type</string>
    <string name="main_activity_tab_overview">Overview</string>
    <string name="base_information_title">The %1$s</string>
    <string name="experience_bar_text">Experience</string>
    <string name="overview_title">Level %1$s, %2$s</string>
    <string name="overview_position">%1$s (%2$s)</string>
    <string name="overview_age">Created: %1$s</string>
    <string name="overview_experience_progress">%1$s/%2$s (%3$s%%)</string>
    <string name="overview_no_party">No party</string>
    <string name="login_dialog_message">Logging in ...</string>
    <string name="login_error_wrong_password">Password is wrong.</string>
    <string name="login_error_wrong_username">Username does not exist.</string>
    <string name="login_error_unknown">Something went wrong.</string>
    <string name="login_error_no_username_or_no_password">Please enter a user name and password.</string>
    <string name="register_dialog_title">Register a new character</string>
    <string name="register_dialog_positive_button">Register</string>
    <string name="register_dialog_negative_button">Abort</string>
    <string name="register_dialog_error_passwords_dont_match">Passwords don\'t match!</string>
    <string name="main_activity_tab_collectibles">Collectibles</string>
    <string name="collectible_description">Found %1$s in %2$s (%3$s)</string>
    <string name="notification_action_show">Show</string>
    <string name="notification_action_dismiss">Dismiss</string>
</resources>
