<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="8dp">

    <EditText
            android:hint="@string/login_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etRegistrationUsername"
            android:layout_gravity="center_horizontal"/>

    <EditText
            android:layout_marginTop="16dp"
            android:hint="@string/login_password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etRegistrationPassword"
            android:layout_gravity="center_horizontal"/>

    <EditText
            android:hint="@string/login_password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etRegistrationPasswordAgain"
            android:layout_gravity="center_horizontal"/>

    <CheckBox
            android:text="@string/login_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cbRegistrationRemember"/>

</LinearLayout>